--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,13 @@
-version: "3"
+version: "3.0"
 services:
-  speedtest_exporter:
-    build: .
-    container_name: monitoring_speedtest_exporter
-    hostname: monitoring_speedtest_exporter
+  speedtest-exporter:
+    image: miguelndecarvalho/speedtest-exporter
+    container_name: speedtest-exporter
+    environment:
+      - SPEEDTEST_PORT=<speedtest-port> #optional
+      - SPEEDTEST_SERVER=<server-id> #optional
+      - PING_URL=<url> #Optional URL for using healthcheck.io or similar cron monitoring to perform GET requests after a successful test.
+      - PING_URL_TIMEOUT=10 #Optional timeout period in seconds. Default is 10 if not set.
     ports:
       - 9798:9798
-    environment:
-      - PING_URL= #Optional URL for using healthcheck.io or similar cron monitoring to perform GET requests after a successful test.
-      - PING_URL_TIMEOUT=10 #Optional timeout period in seconds: Default is 10 if not set.
     restart: unless-stopped
